# dsl-course

./: .gitignore  LICENSE  well-typed-course.cabal
src/: Session1.hs  Session2.hs  Session3.hs  Session4.hs
