cabal-version:      3.0
name:               well-typed-course
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Peter Murphy
maintainer:         26548438+pete-murphy@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
       Session1
       Session2
       Session3
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        containers,
        text
    hs-source-dirs:   src
    default-language: GHC2021

test-suite well-typed-course-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        well-typed-course
